<resources>
    <string name="app_name">Nouvo</string>
    <string name="please_wait">Please wait</string>
    <string name="msg_exit">Please click BACK again to exit</string>

    <string name="email">Email ID</string>
    <string name="add_new_address">Add New Account</string>
    <string name="txt_mobile_no">Mobile Number</string>
    <string name="save">SAVE</string>
    <string name="share">Share</string>

    <string name="error_validation_empty">Required field.</string>
    <string name="error_validation_email">Email id is invalid.</string>
    <string name="error_validation_mobile">Mobile number is invalid.</string>


    <string name="err_generic" translatable="true">Something wen’t wrong, We are facing some challenges with connecting to the server. Kindly ensure you have a proper internet connection.</string>
    <string name="err_network">Please check your internet connection</string>

    //FB Google
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="disconnect">Disconnect</string>


    //Login/Register
    <string name="forget_password"><u>Forgot Password?</u></string>
    <string name="sign_in_underline"><u>Sign In</u></string>
    <string name="login">Sign In</string>
    <string name="confirm_pass_code_hint_text">Confirm Password</string>
    <string name="referral_code_hint">Referral code (Optional)</string>
    <string name="txt_continue">Continue</string>
    <string name="new_user">New User? Register Now</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <string name="user_name_email">Username/Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_with_social">Or Sign in with</string>
    <string name="welcome">Welcome to Nouvo!!</string>
    <string name="welcom_login">Automatic Savings</string>
    <string name="welcome_register">Register to Nouvo!!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="connect_with">Or connect with</string>
    <string name="already_member">Already a Member?</string>
    <string name="verify_email">Thank You!\nPlease check your email to activate your account.</string>
    <string name="password_sent">A passcode has been sent to your registered e-mail address.</string>
    <string name="title_activity_home">Nouvo</string>
    <string name="title_home">Home</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_redeem">Redeem</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="user_location">Location</string>
    <string name="privacy"><![CDATA[Privacy & Security]]></string>
    <string name="disclaimer"><b>Message:</b> Swipe any card you add here at any of our merchants to receive automatic cashback.</string>
    <string name="add">Add</string>
    <string name="description">Description</string>
    <string name="txt_contact_us">Do you have any questions, comments, or concerns? Fill out the form below and a team member will get back to you as soon as possible</string>
    <string name="confirm">Confirm</string>
    <string name="acc_number">Account Number</string>
    <string name="wallet_address">Wallet Address</string>
    <string name="paypal_email">Email</string>
    <string name="btn_cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="err_email_exist">This email id is already registered.</string>
    <string name="err_failed_verification_link">Failed to send verification link.</string>
    <string name="err_invalid_creds">Invalid email id or password.</string>
    <string name="password_changed">Password changed successfully.</string>
    <string name="err_invalid_old_password">Please enter valid old password.</string>
    <string name="card_added">Card added successfully.</string>
    <string name="err_card_aready_exists">This card is already added.</string>
    <string name="delete_card">Card deleted successfully.</string>
    <string name="err_delete_card">Error while deleting card.</string>
    <string name="ticket_raised">Support ticket request has been raised successfully!</string>
    <string name="notification_enabled">Notifications enabled successfully.</string>
    <string name="notification_disabled">Notifications disabled successfully.</string>
    <string name="err_notification">Notifications disabled successfully.</string>
    <string name="enable_location">Enable Location Services</string>
    <string name="enable">Enable</string>
    <string name="cashback_till_date">Total Cashback </string>
    <string name="permission_error">Location permission is must to explore the exciting deals!</string>
    <string name="address">Address</string>
    <string name="name_as_per_bank">Full Name</string>
    <string name="err_valid_redeem_mode">Please select valid redeem mode.</string>
    <string name="err_valid_redeem_option">Please select valid redeem option.</string>
    <string name="redeem_request_raised">Redeem request has been raised successfully!</string>
    <string name="app_update">App Update</string>
    <string name="btn_exit">Exit</string>
    <string name="update">Update</string>
    <string name="pick_from_gallery">Pick from Gallery</string>
    <string name="click_from_camera">Click from Camera</string>
    <string name="err_password_uppercase">Password must contain at-least one Uppercase character.</string>
    <string name="err_password_special_character">Password must contain at-least one special character.</string>
    <string name="err_password_digit">Password must contain at-least one digit.</string>
    <string name="err_password_pattern">Password must 8 to 14 characters.</string>
    <string name="send">Send</string>
    <string name="name_on_card">Name on Card</string>
    <string name="bt_card_number_required">Card number is required</string>
    <string name="bt_card_number_invalid">Card number is invalid</string>

    <string name="bt_cvv">CVV</string>
    <string name="bt_cvc">CVC</string>
    <string name="bt_cid">CID</string>
    <string name="bt_cvn">CVN</string>
    <string name="ok">Ok</string>
    <string name="err_profile_pic">Error while uploading profile pic.</string>


    <string name="facebook_app_id">256112161899053</string>
    <string name="fb_login_protocol_scheme">fb256112161899053</string>
    <string name="err_invalid_token">Please enter valid token received via mail.</string>
    <string name="app_update_msg">Please update an app to continue exploring</string>
    <string name="err_verification_pending">Please verify account by clicking on verification link received via email.</string>
    <string name="invalid_email">Error - Invalid email address.</string>
    <string name="err_falled_password_reset_link">Failed to sent password reset link.</string>
    <string name="err_token_expired">Reset token is expired.</string>
    <string name="err_session_expired">Session has been expired please re-login to continue.</string>
    <string name="no_deal_error">No stores available for %s yet. Please change the location/city.</string>
    <!--<string name="nouvo_referral_invite">Hey, join this Nouvo app to get rewards on card swipe. Enter my code %s and we\'ll each get rewards!</string>-->
    <string name="nouvo_referral_invite"> Hey, download Nouvo today to get automatic rewards each time you swipe, dip, or insert a card at your favorite merchant. Enter my code %s and we’ll each get a bonus in XP, which boosts our cashback at locations!</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="refer_earn"><![CDATA[Refer & Earn]]></string>
    <string name="referral_title">Referral Code</string>
    <string name="have_referral_code">Have a referral code, apply it here to get the XP points!</string>
    <string name="apply">Apply</string>
    <string name="referral_applied">Referral code applied successfully!</string>
    <string name="invite">Invite</string>
    <string name="referral_desc">Share your code with friends. When they use Nouvo for the first time, you will both get 10 XP points.</string>
    <string name="unable_navigate">Sorry, we are unable to navigate you to this store location.</string>
    <string name="routin_number">Routing Number</string>
    <string name="no_deals_for_filter">No store/deals available for applied filter.</string>
    <string name="no_history_available_yet">No history available yet!</string>
</resources>
