<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginBottom="@dimen/margin_very_small"
              android:layout_marginLeft="@dimen/margin_medium"
              android:layout_marginRight="@dimen/margin_medium"
              android:layout_marginTop="@dimen/margin_very_small"
              android:background="@color/color_white"
              android:orientation="vertical"
              android:paddingTop="@dimen/margin_extra_large">


    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/style_edit_text"
            app:errorTextAppearance="@style/AppEditTextInputErrorColorGray">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/et_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/vc_user"
                android:hint="@string/user_name_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLength="32"
                android:theme="@style/style_edit_text"
                />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/style_edit_text"
            app:errorTextAppearance="@style/AppEditTextInputErrorColorGray">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/vc_password"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="10"
                android:theme="@style/style_edit_text"
                />

    </android.support.design.widget.TextInputLayout>

    <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/margin_tiny"
            android:text="@string/forget_password"
            android:textColor="@color/appColor"
            android:textSize="@dimen/text_size_medium"
            />

    <Button
            android:id="@+id/bt_login"
            style="@style/AppButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:text="@string/login"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_very_small"
            android:layout_marginRight="@dimen/margin_very_small"
            android:layout_marginTop="@dimen/margin_very_small"
            android:gravity="center">
        <TextView
                android:id="@+id/login_with"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center_horizontal"
                android:padding="@dimen/margin_small"
                android:text="@string/sign_in_with_social"
                android:textColor="@color/color_text"
                android:textSize="@dimen/text_size_medium"
                />

        <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/login_with"
                android:background="@color/color_text"/>


        <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/login_with"
                android:background="@color/color_text"/>
    </RelativeLayout>


    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="top|center_horizontal"
            android:orientation="horizontal">
        <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_facebook"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                app:srcCompat="@drawable/vc_facebook"/>

        <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_google"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                app:srcCompat="@drawable/vc_google_plus"/>

    </LinearLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:gravity="center_horizontal"
            android:text="@string/new_user"
            android:textColor="@color/color_text"
            android:textSize="@dimen/text_size_medium"
            />


    <Button
            android:id="@+id/bt_register"
            style="@style/AppButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_very_small"
            android:text="@string/sign_up"/>

</LinearLayout>